tests/baselines/reference/errorOnInitializerInObjectTypeLiteralProperty.errors.txt
errorOnInitializerInObjectTypeLiteralProperty.ts(2,19): error TS1247: A type literal property cannot have an initializer.
errorOnInitializerInObjectTypeLiteralProperty.ts(6,19): error TS1247: A type literal property cannot have an initializer.


==== errorOnInitializerInObjectTypeLiteralProperty.ts (2 errors) ====
    var Foo: {
        bar: number = 5;
                      ~
!!! error TS1247: A type literal property cannot have an initializer.
    };
    
    let Bar: {
        bar: number = 5;
                      ~
!!! error TS1247: A type literal property cannot have an initializer.
    };
    